--- a/firstcontact.html
+++ b/firstcontact.html
@@ -8,10 +8,21 @@
 </head>
 <body>
     <div class="container">
-        <header class="cabecalho">
-            <img src="rb.jpeg" class="banner" alt="bannerf1">
-        </header>
+        <img src="rb.jpeg" class="img-fluid" alt="..">
     </div>
+    <div class="container text-center">
+        <div class="row align-items-start">
+          <div class="col">
+            <img src="giulia.jpg" class="img-thumbnail" alt="...">
+          </div>
+          <div class="col">
+            <img src="countach.jpg" class="img-thumbnail" alt="...">
+          </div>
+          <div class="col">
+            <img src="zrv.jpg" class="img-thumbnail" alt="...">
+          </div>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
